--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "formik": "^2.4.6",
     "react": "^19.1.0",
     "react-datepicker": "^8.4.0",
